--- a/KID/Resources/Strings.uk-UA.resx
+++ b/KID/Resources/Strings.uk-UA.resx
@@ -136,5 +136,8 @@
   <data name="Language_Ukrainian" xml:space="preserve">
     <value>Українська</value>
   </data>
+  <data name="Language_SelfName" xml:space="preserve">
+    <value>Ukrainian</value>
+  </data>
 </root>
 
