--- a/KID/Resources/Strings.en-US.resx
+++ b/KID/Resources/Strings.en-US.resx
@@ -106,8 +106,11 @@
   <data name="Error_StackTrace" xml:space="preserve">
     <value>Stack: {0}</value>
   </data>
-  <data name="Error_ProgramStopped" xml:space="preserve">
+  <data name="Notification_ProgramStopped" xml:space="preserve">
     <value>Program stopped</value>
+  </data>
+  <data name="Notification_ProgramFinished" xml:space="preserve">
+    <value>Program finished execution</value>
   </data>
   <data name="FileFilter_CSharp" xml:space="preserve">
     <value>C# Files (*.cs)|*.cs|All Files (*.*)|*.*</value>
