change name from Language_SelfName to Language_EnglishName in res files

--- a/KID/Resources/Strings.ru-RU.resx
+++ b/KID/Resources/Strings.ru-RU.resx
@@ -139,7 +139,7 @@
   <data name="Language_Ukrainian" xml:space="preserve">
     <value>Украинский</value>
   </data>
-  <data name="Language_SelfName" xml:space="preserve">
+  <data name="Language_EnglishName" xml:space="preserve">
     <value>Russian</value>
   </data>
 </root>
