--- a/KID/Resources/Strings.en-US.resx
+++ b/KID/Resources/Strings.en-US.resx
@@ -139,7 +139,7 @@
   <data name="Language_Ukrainian" xml:space="preserve">
     <value>Ukrainian</value>
   </data>
-  <data name="Language_SelfName" xml:space="preserve">
+  <data name="Language_EnglishName" xml:space="preserve">
     <value>English</value>
   </data>
 </root>
