--- a/KID/Resources/Strings.en-US.resx
+++ b/KID/Resources/Strings.en-US.resx
@@ -145,5 +145,11 @@
   <data name="Language_Ukrainian" xml:space="preserve">
     <value>Ukrainian</value>
   </data>
+  <data name="Theme_Light" xml:space="preserve">
+    <value>Light</value>
+  </data>
+  <data name="Theme_Dark" xml:space="preserve">
+    <value>Dark</value>
+  </data>
 </root>
 
