--- a/KID.WPF.IDE/Resources/Strings.ru-RU.resx
+++ b/KID.WPF.IDE/Resources/Strings.ru-RU.resx
@@ -169,5 +169,8 @@
   <data name="TabContext_MoveRight" xml:space="preserve">
     <value>Передвинуть вправо</value>
   </data>
+  <data name="TabContext_SaveAndSetAsTemplate" xml:space="preserve">
+    <value>Сохранить и назначить&#10;в качестве шаблона</value>
+  </data>
 </root>
 
