--- a/KID.WPF.IDE/Resources/Strings.en-US.resx
+++ b/KID.WPF.IDE/Resources/Strings.en-US.resx
@@ -136,6 +136,15 @@
   <data name="Error_FilePathEmpty" xml:space="preserve">
     <value>File path cannot be empty</value>
   </data>
+  <data name="Error_FileOpenFailed" xml:space="preserve">
+    <value>Failed to open file: {0}</value>
+  </data>
+  <data name="Error_FileSaveFailed" xml:space="preserve">
+    <value>Failed to save file: {0}</value>
+  </data>
+  <data name="Error_RunFailed" xml:space="preserve">
+    <value>Execution error: {0}</value>
+  </data>
   <data name="Menu_ChangeLanguage" xml:space="preserve">
     <value>Change Language</value>
   </data>
