--- a/KID.WPF.IDE/Resources/Strings.uk-UA.resx
+++ b/KID.WPF.IDE/Resources/Strings.uk-UA.resx
@@ -136,6 +136,15 @@
   <data name="Error_FilePathEmpty" xml:space="preserve">
     <value>Шлях до файлу не може бути порожнім</value>
   </data>
+  <data name="Error_FileOpenFailed" xml:space="preserve">
+    <value>Не вдалося відкрити файл: {0}</value>
+  </data>
+  <data name="Error_FileSaveFailed" xml:space="preserve">
+    <value>Не вдалося зберегти файл: {0}</value>
+  </data>
+  <data name="Error_RunFailed" xml:space="preserve">
+    <value>Помилка при виконанні: {0}</value>
+  </data>
   <data name="Menu_ChangeLanguage" xml:space="preserve">
     <value>Змінити мову</value>
   </data>
