refactor: enhance localization and theme management by adding error handling for settings, updating resource keys, and integrating new events in WindowConfigurationService

--- a/KID.WPF.IDE/Resources/Strings.ru-RU.resx
+++ b/KID.WPF.IDE/Resources/Strings.ru-RU.resx
@@ -142,6 +142,9 @@
   <data name="Error_FileSaveFailed" xml:space="preserve">
     <value>Не удалось сохранить файл: {0}</value>
   </data>
+  <data name="Error_SettingsSaveFailed" xml:space="preserve">
+    <value>Не удалось сохранить настройки: {0}</value>
+  </data>
   <data name="Error_RunFailed" xml:space="preserve">
     <value>Ошибка при выполнении: {0}</value>
   </data>
