--- a/KID.WPF.IDE/Resources/Strings.en-US.resx
+++ b/KID.WPF.IDE/Resources/Strings.en-US.resx
@@ -142,6 +142,9 @@
   <data name="Error_FileSaveFailed" xml:space="preserve">
     <value>Failed to save file: {0}</value>
   </data>
+  <data name="Error_SettingsSaveFailed" xml:space="preserve">
+    <value>Failed to save settings: {0}</value>
+  </data>
   <data name="Error_RunFailed" xml:space="preserve">
     <value>Execution error: {0}</value>
   </data>
